# seg-correct

./: README.md  example_corrections.txt  setup.cfg
src/: run.py
