[metadata]
name = seg-correct
version = 0.0.1
description = This package identifies problematically empty zones
author = Kelly Christensen
url = https://github.com/kat-kel/seg-correct

[options]
install_requires =
    click
    lxml
packages = find:

[options.entry_points]
console_scripts =
    seg-correct = src.run:main
